fix form breaking on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: 7px;
+    gap: 20px;
 }
 
 .form-section  form h2 {
@@ -161,6 +161,7 @@ body {
     align-items: center;
     width: 100%;
     max-width: 450px;
+    flex-wrap: wrap;
     
 }
 
